Fri Jan 20 10:30:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_root/root_svth.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
          Changed the arguments a little bit more, -Ssvntc suppreses _svnt.cpp,
          -Ssvntt suppresses _svnt_T.{h,cpp}

Fri Jan 20 09:27:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
          Extended rules

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_root/root_svs.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
          Added -Ssvcp to suppress generation of _svnt.cpp and -Svtp to
          suppress generation of _svnt_T.cpp

Mon Jan 16 22:03:43 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * MPC/config/taoidldefaults.mpb:

          Added ace_idl_dependencies as a base project of
          taobaseidldefaults.

          This is a merge of work done in the 'tao-mpc_performance'
          branch.

Mon Jan 16 14:13:36 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:

          Fixed fuzz errors.

Fri Jan 13 23:09:56 UTC 2012  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_component/servant_svs.h:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:

          Fixed a bug where the attributes of a component's supported
          interfaces (if any) were not getting their initialization
          code block in the generate servant's method set_attributes().
          Thanks to Michael Frommberger
          <michael dot frommberger at gmx dot net> for reporting the